--- a/index.html
+++ b/index.html
@@ -16,34 +16,34 @@
             <h2 class="section-title">Numerical Aptitude</h2>
             <div class="scroll-container">
                 <a href="numbers.html">
-                    <div class="quiz-topic"><img src="icons/numbers.png" alt="Numbers"><p>Numbers</p></div>
+                    <div class="quiz-topic"><img src="numbers.png" alt="Numbers"><p>Numbers</p></div>
                 </a>
                 <a href="percentages.html">
-                    <div class="quiz-topic"><img src="icons/percentages.jpg" alt="Percentages"><p>Percentages</p></div>
+                    <div class="quiz-topic"><img src="percentages.jpg" alt="Percentages"><p>Percentages</p></div>
                 </a>
                 <a href="ratios.html">
-                    <div class="quiz-topic"><img src="icons/ratios.png" alt="Ratios & Proportions"><p>Ratios & Proportions</p></div>
+                    <div class="quiz-topic"><img src="ratios.png" alt="Ratios & Proportions"><p>Ratios & Proportions</p></div>
                 </a>
                 <a href="profit_loss.html">
-                    <div class="quiz-topic"><img src="icons/profit_loss.png" alt="Profit & Loss"><p>Profit & Loss</p></div>
+                    <div class="quiz-topic"><img src="profit_loss.png" alt="Profit & Loss"><p>Profit & Loss</p></div>
                 </a>
                 <a href="interest.html">
-                    <div class="quiz-topic"><img src="icons/interest.png" alt="Interest"><p>Simple & Compound Interest</p></div>
+                    <div class="quiz-topic"><img src="interest.png" alt="Interest"><p>Simple & Compound Interest</p></div>
                 </a>
                 <a href="time_work.html">
-                    <div class="quiz-topic"><img src="icons/time_work.png" alt="Time & Work"><p>Time & Work</p></div>
+                    <div class="quiz-topic"><img src="time_work.png" alt="Time & Work"><p>Time & Work</p></div>
                 </a>
                 <a href="speed_distance.html">
-                    <div class="quiz-topic"><img src="icons/speed_distance.png" alt="Speed & Distance"><p>Time, Speed & Distance</p></div>
+                    <div class="quiz-topic"><img src="speed_distance.png" alt="Speed & Distance"><p>Time, Speed & Distance</p></div>
                 </a>
                 <a href="averages.html">
-                    <div class="quiz-topic"><img src="icons/averages.png" alt="Averages"><p>Averages</p></div>
+                    <div class="quiz-topic"><img src="averages.png" alt="Averages"><p>Averages</p></div>
                 </a>
                 <a href="probability.html">
-                    <div class="quiz-topic"><img src="icons/probability.png" alt="Probability"><p>Probability</p></div>
+                    <div class="quiz-topic"><img src="probability.png" alt="Probability"><p>Probability</p></div>
                 </a>
                 <a href="permutation_combination.html">
-                    <div class="quiz-topic"><img src="icons/permutation_combination.png" alt="Permutations & Combinations"><p>Permutations & Combinations</p></div>
+                    <div class="quiz-topic"><img src="permutation_combination.png" alt="Permutations & Combinations"><p>Permutations & Combinations</p></div>
                 </a>
             </div>
         </section>
@@ -52,37 +52,38 @@
             <h2 class="section-title">Logical Reasoning</h2>
             <div class="scroll-container">
                 <a href="puzzles.html">
-                    <div class="quiz-topic"><img src="icons/puzzles.png" alt="Puzzles"><p>Puzzles</p></div>
+                    <div class="quiz-topic"><img src="puzzles.png" alt="Puzzles"><p>Puzzles</p></div>
                 </a>
                 <a href="series.html">
-                    <div class="quiz-topic"><img src="icons/series.png" alt="Number Series"><p>Number Series</p></div>
+                    <div class="quiz-topic"><img src="series.png" alt="Number Series"><p>Number Series</p></div>
                 </a>
                 <a href="directions.html">
-                    <div class="quiz-topic"><img src="icons/directions.png" alt="Directions"><p>Directions & Distances</p></div>
+                    <div class="quiz-topic"><img src="directions.png" alt="Directions"><p>Directions & Distances</p></div>
                 </a>
                 <a href="blood_relations.html">
-                    <div class="quiz-topic"><img src="icons/blood_relations.png" alt="Blood Relations"><p>Blood Relations</p></div>
+                    <div class="quiz-topic"><img src="blood_relations.png" alt="Blood Relations"><p>Blood Relations</p></div>
                 </a>
                 <a href="coding_decoding.html">
-                    <div class="quiz-topic"><img src="icons/coding_decoding.png" alt="Coding-Decoding"><p>Coding-Decoding</p></div>
+                    <div class="quiz-topic"><img src="coding_decoding.png" alt="Coding-Decoding"><p>Coding-Decoding</p></div>
                 </a>
                 <a href="syllogisms.html">
-                    <div class="quiz-topic"><img src="icons/syllogisms.png" alt="Syllogisms"><p>Syllogisms</p></div>
+                    <div class="quiz-topic"><img src="syllogisms.png" alt="Syllogisms"><p>Syllogisms</p></div>
                 </a>
                 <a href="seating.html">
-                    <div class="quiz-topic"><img src="icons/seating.png" alt="Seating Arrangement"><p>Seating Arrangement</p></div>
+                    <div class="quiz-topic"><img src="seating.png" alt="Seating Arrangement"><p>Seating Arrangement</p></div>
                 </a>
                 <a href="data_interpretation.html">
-                    <div class="quiz-topic"><img src="icons/data_interpretation.png" alt="Data Interpretation"><p>Data Interpretation</p></div>
+                    <div class="quiz-topic"><img src="data_interpretation.png" alt="Data Interpretation"><p>Data Interpretation</p></div>
                 </a>
                 <a href="logical_deductions.html">
-                    <div class="quiz-topic"><img src="icons/logical_deductions.png" alt="Logical Deductions"><p>Logical Deductions</p></div>
+                    <div class="quiz-topic"><img src="logical_deductions.png" alt="Logical Deductions"><p>Logical Deductions</p></div>
                 </a>
                 <a href="venn_diagrams.html">
-                    <div class="quiz-topic"><img src="icons/venn_diagrams.png" alt="Venn Diagrams"><p>Venn Diagrams</p></div>
+                    <div class="quiz-topic"><img src="venn_diagrams.png" alt="Venn Diagrams"><p>Venn Diagrams</p></div>
                 </a>
             </div>
         </section>
     </main>
 </body>
 </html>
+
